--- a/Franchise.html
+++ b/Franchise.html
@@ -18,7 +18,7 @@
             </div>
 
                 <div class="navbar">
-                    <a href="./FrontPage(KB).html">Home</a>
+                    <a href="./index.html">Home</a>
                     <a href="./About.html">About</a>
                     <a href="./Menu.html">Menu</a>
                     <a href="">Franchise</a>
